# Comfyui-Startup

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  contact.html  custom-node-list.json  description.html  index.html  install.html  latest.json  lingui.config.ts  model-list.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  searchindex.js  searchindex.json  tailwind.config.js  tsconfig.json  vite.config.ts  watcher.json
.github/workflows/: guide.yaml  release.yaml
entity/: Cargo.toml
entity/src/: download_chunks.rs  download_tasks.rs  lib.rs
guide/: .gitignore  book.toml
guide/src/: SUMMARY.md  contact.md  description.md  install.md
guide/theme/custom/: onclick.js
install.assets/: iconfont.css
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240327_044339_chunk.rs  m20240402_142240_model.rs  m20240402_142619_plugin.rs
plugins/tauri-plugin-tracing/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
plugins/tauri-plugin-tracing/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-tracing/permissions/: default.toml
plugins/tauri-plugin-tracing/permissions/autogenerated/: reference.md
plugins/tauri-plugin-tracing/permissions/autogenerated/commands/: error.toml  info.toml  trace.toml  warn.toml
plugins/tauri-plugin-tracing/permissions/schemas/: schema.json
plugins/tauri-plugin-tracing/src/: commands.rs  desktop.rs  lib.rs
plugins/tauri-plugin-tracing/webview-dist/: index.d.ts  index.js
plugins/tauri-plugin-tracing/webview-src/: index.ts
scripts/: publish.mjs  updater.mjs
src/: App.tsx  index.css  main.tsx  useStore.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/asserts/: brew_finished.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  model.rs  plugin.rs
src-tauri/src/commands/: config.rs  download.rs  git.rs  json_db.rs  mod.rs  model.rs  plugin.rs
src-tauri/src/db/: json_db.rs  mod.rs
src-tauri/src/download/: download_req.rs  mod.rs
src-tauri/src/entity/: download_chunks.rs  download_tasks.rs  mod.rs  model.rs  plugin.rs  prelude.rs
src-tauri/src/git/: mod.rs
src-tauri/src/macos/: install_brew.rs  mod.rs
src-tauri/src/service/: download_chunks.rs  download_tasks.rs  mod.rs  model.rs  plugin.rs
src-tauri/src/state/: config.rs  download.rs  mod.rs
src-tauri/src/utils/: download.rs  git.rs  mod.rs  sysinfo.rs
src/api/: index.ts  model.ts  plugin.ts
src/components/: CustomLink.tsx  InputButton.tsx  Layout.tsx  SkipModal.tsx  Slider.tsx  basicLayout.tsx  errorBoundary.tsx  layout.tsx  slider.tsx  sliderLayout.tsx
src/components/Home/: ManagerModal.tsx
src/hooks/: useHydration.ts  usePaginationSearch.tsx  useUpdater.ts
src/lib/: notification.ts  store.ts  utils.ts
src/locales/: en.po  ja.po  zh.po
src/pages/: FirstUse.tsx  Home.tsx  firstUse.tsx  home.tsx
src/pages/Model/: index.tsx  useStore.ts
src/pages/Model/commponents/: AllModel.tsx  DownloadedModel.tsx  DownloadingModel.tsx  Item.tsx
src/pages/Setting/: index.tsx
src/pages/model/commponents/: downloadedModel.tsx
src/pages/plugin/: AllPlugin.tsx  DownloadedPlugin.tsx  DownloadingPlugin.tsx  Index.tsx  Item.tsx  index.tsx  useStore.ts
src/pages/plugin/commponents/: AllPlugin.tsx  DownloadedPlugin.tsx  DownloadingPlugin.tsx  Item.tsx  downloadingPlugin.tsx
src/pages/plugin/hooks/: usePaginationSearch.ts  usePaginationSearch.tsx
src/pages/setting/: index.tsx
src/router/: router.ts
translate/: Cargo.toml
translate/src/: baidu.rs  lib.rs  main.rs
translate/src/check/: mod.rs
translate/src/tencent/: client.rs  encryption.rs  mod.rs
