[package]
name = "comfyui-startup"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
tempfile = "3.10.1"
smbios-lib = "0.9.1"
tauri-plugin-dialog = "2.0.0-beta.3"
tauri-plugin-tracing = { path = "../plugins/tauri-plugin-tracing" }
tracing = "0.1.40"
