[package]
name = "comfyui-startup"
version = "0.1.4"
description = "A Tauri App"
authors = ["yexiyue <yexiyue666@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
tempfile = "3.10.1"
tauri-plugin-dialog = "2.0.0-beta.3"
tracing = "0.1.40"
reqwest = { version = "0.12.2", features = ["stream", "http2", "json"] }
tokio = { version = "1.36.0", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
rand = "0.8.5"
futures = "0.3.30"
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
migration = { path = "../migration" }
tokio-util = "0.7.10"
chrono = "0.4.37"
thiserror = "1.0.58"
derive_builder = "0.20.0"
tracing-subscriber = "0.3.18"
sysinfo = { version = "0.30.7", features = ["serde"] }
git2 = { version = "0.18.3", features = ["vendored-openssl"] }
walkdir = "2.5.0"
tauri-plugin-notification = "2.0.0-beta.3"
tauri-plugin-process = "2.0.0-beta.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.3"

