[package]
name = "translate"
version = "0.1.0"
edition = "2021"
default-run = "translate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
derive_builder = "0.20.0"
dotenv = "0.15.0"
futures = "0.3.30"
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
md5 = { version = "0.7.0", optional = true }
once_cell = "1.19.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = { version = "0.10.8", optional = true }
sha256 = { version = "1.5.0", optional = true }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
baidu = ["md5"]
tencent = ["hex", "hmac", "sha2", "sha256"]
