[package]
name = "tauri-plugin-tracing"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-tracing"

[dependencies]
tauri = { version = "2.0.0-beta.13" }
serde = "1.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.10", features = ["build"] }
